RPS-1076: Assert over the NuGet wire protocol that an override stores the replacement metadata (#382)
NuGetPublishProtocolIT pushed the same nuspec twice, so a version row built
from the first package could not be told from one built from the second.
Push replacement packages whose nuspec, README and dependencies all differ
and assert the row holds the second package's values (incl. a replacement
declaring no dependencies or README), and that a rejected duplicate leaves
the first package's row and files untouched.

Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>